fix: align suggestion input left on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -405,6 +405,10 @@ a {
         color: #000;
         font-family: ui-monospace, monospace;
     }
+
+    .suggest-input-container {
+        justify-content: flex-start;
+    }
 }
 
 #suggest-link {
